# rclone-copy

./: .gitignore  .gitmodules  250630 proyect description.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.yaml.sample  main.py  pyproject.toml
src/: __init__.py  backup_manager.py  config.py  schedule_checker.py
