[project]
name = "rclone-copy"
version = "0.1.0"
description = "Secondary backup copy using rclone with cron-based scheduling"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0.0",
    "croniter>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "W", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov"
testpaths = ["tests"]